# codymaster

./: .dev.vars.example  .env.example  .gitignore  .gitleaks.toml  .npmignore  .project-identity.json  .snyk  CHANGELOG.md  GEMINI.md  README-hi.md  README-ko.md  README-ru.md  README-vi.md  README-zh.md  README.md  for-dev.html  for-founders.html  for-pm.html  for-qa.html  gemini-extension.json  how-it-works.html  index.html  install.sh  package-lock.json  package.json  projects.txt  run_batch1.js  script.js  showcase.html  skills-lock.json  translations.js  vitest.config.ts  wrangler.toml
.agent-tasks/: .gitignore
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.cursor-plugin/: plugin.json
.jules/: sentinel.md
.opencode/: INSTALL.md
Haravan_Cody_Master_Pitch/: 00_Loi_Mo_Dau.md  01_CEO_CTO.md  02_Head_of_Product.md  03_Tech_Lead_Va_Dev.md  04_QC_QA.md  05_Designer.md  06_Head_of_System_Security.md  brainstorm-output.md
adapters/: antigravity.js  claude-code.js  cursor.js
cm-engineering/: README.md
cm-growth/: README.md
cm-operations/: README.md
cm-orchestration/: README.md
cm-product/: README.md
commands/: bootstrap.md  build.md  content.md  continuity.md  debug.md  demo.md  deploy.md  plan.md  review.md  track.md  ux.md
content-output/: video-20260327-hệ-thống-não-bộ-ai-mới-của-codymaster-với-knowledge-kitchen,-notebooklm-cloud-brain-và-qmd-local-memory-ưu-việt-và-mạnh-mẽ-như-thế-nào.md  video-20260329-giới-thiệu-thay-đổi-openspec-của-codymaster.md
css/: design-tokens.css  style.css
docs/: CodyMaster-OpenSpec-Upgrade.md  architecture.md  brain.md  deployment.md  how-it-work.md  index.md  knowledge-architecture.md  package-lock.json  package.json  security.md  showcase.md  vibe-coding-guide.md
i18n/: en.json  ru.json  vi.json  zh.json
js/: i18n-data.js  i18n.js
projects/cm-ux-master/cli/: README.md  pyproject.toml  requirements.txt
projects/cm-ux-master/cli/uxmaster/: __main__.py  template_engine.py
projects/cm-ux-master/cli/uxmaster/commands/: __init__.py  extract.py  init.py  validate.py
projects/cm-ux-master/cli/uxmaster/utils/: detect.py
public/: agent-support.html  brain.html  cli.html  dashboard-static.html  demo.html  faq.html  for-claw-family.html  for-cmos.html  for-designers.html  for-dev.html  for-founders.html  for-pms.html  for-tech-teams.html  how-it-works.html  index.html  parallel-coding.html  persona.html  playbook.html  skills.html  start.html  story.html  vibe-coding.html  vs-bolt.html  vs-google-ai-studio.html  vs-lovable.html  vs-others.html  vs-replit.html  vs-scrum.html  why-cody-master.html
scripts/: audit-i18n.js  auto-extract-i18n.js  cm-dash.js  dashboard-watcher.js  deep-translate-i18n.js  gate-0-secrets.js  gate-1-syntax.js  gate-3-i18n.js  (+23 more)
(+813 files in other folders)
